<resources>
    <string name="app_name">Planer tygodnia</string>
    <string name="drawer_opened">Otwarte</string>
    <string name="drawer_close">Zamkniete</string>
    <string name="selected_one">Zaznaczono jeden</string>
    <string name="selected_more">Zaznaczono </string>

    <string name="start">Start</string>
    <string name="viewI">Wydarzenia</string>
    <string name="viewII">Lista zakupów</string>
    <string name="more">Więcej..</string>
    <string name="GPS_start">Sprawdz trasę</string>
    <string name="word_GPS_enable">gps enabled</string>
    <string name="viewIII">Notatnik</string>

    <string name="vI_details">Szczegóły wydarzenia</string>
    <string name="vII_details">Szczegóły produktu</string>
    <string name="vIII_details">Szczegóły notatki</string>

    <string name="editevent">Wydarzenia/Edytuj</string>
    <string name="addevent">Wydarzenia/Dodaj</string>

    <string name="editenotebook">Notatnik/Edytuj/</string>
    <string name="addnotebook">Notatnik/Dodaj</string>

    <string name="editshop">Lista zakupów/Edytuj</string>
    <string name="addeshop">Lista zakupów/Dodaj</string>

    <string name="delete">Usuń</string>
    <string name="edit">Edytuj</string>
    <string name="add1">Dodaj nowy wpis</string>

    <string name="title">Tytuł</string>
    <string name="data">Data</string>
    <string name="quantity">Ilość</string>
    <string name="description">Opis</string>
    <string name="localization">Localizacja</string>
    <string name="foto">Foto</string>
    <string name="add2">Dodaj</string>
    <string name="cancel">Anuluj</string>
    <string name="save">Zapisz</string>
    <string name="pressure">Ciśnienie wynosi: </string>
    <string name="Biometrr">Biometr</string>
    <string name="Biometr">Sprawdz warunki biometeo</string>
    <string name="Biometrplus">Warunki biometeo: korzystne</string>
    <string name="Biometrminusplus">Warunki biometeo: neutralne</string>
    <string name="Biometrminus">Warunki biometeo: niekorzystny</string>


    <plurals name="oneManyStr">
        <item quantity="zero"></item>
        <item quantity="one"> Wybrano jeden</item>
        <item quantity="other"> Wybrano %d</item>
    </plurals>


</resources>
